--- a/themes/indigo/_config.yml
+++ b/themes/indigo/_config.yml
@@ -28,7 +28,7 @@ avatar_link: /
 # 头像背景图
 brand: /img/brand.jpg
 # favicon
-favicon: /favicon.ico
+favicon: /img/favicon.ico
 
 # email
 email: 1051347984@qq.com
@@ -71,7 +71,7 @@ toc:
   list_number: true  # 是否显示数字排序
 
 # 文章页留言内容，hexo中所有变量及辅助函数等均可调用，具体请查阅 hexo.io
-postMessage: 我是真的菜
+postMessage:  (“▔□▔)我是真的菜，真的！ (눈_눈)
 
 # 站长统计，如要开启，输入CNZZ站点id，如 cnzz: 1255152447
 cnzz: false
