--- a/_config.yml
+++ b/_config.yml
@@ -3,10 +3,10 @@
 ## Source: https://github.com/hexojs/hexo/
 
 # Site
-title: 蓝书签
-subtitle: 博客
-description: 记录知识的获取
-author: 杨耀
+title: 书签
+subtitle: 一个咸鱼到菜鸡的经历
+description: 菜鸡码畜的自我修养
+author: 在下AKK
 language: zh-CN
 email: 1051347984@qq.com
 timezone: Asia/Shanghai
