--- a/_config.yml
+++ b/_config.yml
@@ -4,8 +4,8 @@
 
 # Site
 title: 书签
-subtitle: 一个咸鱼到菜鸡的经历
-description: 菜鸡码畜的自我修养
+subtitle: 博客
+description: 心如花木，向阳而生
 author: 在下AKK
 language: zh-CN
 email: 1051347984@qq.com
